--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -1,25 +1,32 @@
 <ion-view title='TipAdvisor'>
   <ion-content ng-controller='homeCtrl'>
-    <div class='four-panel-container'>
-      <div class='bill-panel quarter-panel'>
-        <p>The bill is {{ bill.currency | currency }}</p>
-        <input inputOnlyNumsTwoDec='' ng-change='recalcTipPercent(); recalcTaxPercent(); calcTotal()' ng-model='bill.currency' placeholder='{{ bill.currency | number : 2}}' type='number'>
+    <div class='main'>
+      <div class='bill-panel quarter-panel active-panel'>
+        <div class='label'>Bill</div>
+        <div class='number'>{{ bill.currency | currency }}</div>
+        <!-- %input{ type: "number", "ng-model" => "bill.currency", "ng-change" => "recalcTipPercent(); recalcTaxPercent(); calcTotal()", placeholder: "{{ bill.currency | number : 2}}", "inputOnlyNumsTwoDec" => "" } -->
       </div>
       <div class='tip-panel quarter-panel'>
-        <p>The tip is {{ tip.percent * 100 | number : 2 }} %</p>
-        <input ng-change='recalcTipPercent(); calcTotal()' ng-model='tip.currency' type='number'>
-        <p>Change tip by percent</p>
-        <input max='0.30' min='0.00' ng-change='recalcTipCurrency(); calcTotal()' ng-model='tip.percent' step='0.01' type='range'>
+        <div class='label'>Tip</div>
+        <div class='number'>
+          ({{ tip.percent * 100 | number : 2 }}%)
+          <span class='currency'>{{ tip.currency | currency }}</span>
+        </div>
+        <!-- %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent(); calcTotal()" } -->
+        <!-- %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency(); calcTotal()" } -->
       </div>
       <div class='tax-panel quarter-panel'>
-        <p>The tax is: {{ tax.currency | currency }}</p>
-        <input ng-change='recalcTaxPercent(); calcTotal()' ng-model='tax.currency' type='number'>
-        <p>Change tax by percent (current percent is {{ tax.percent * 100 | number : 2 }})</p>
-        <input max='1' min='0.00' ng-change='recalcTaxCurrency(); calcTotal()' ng-model='tax.percent' step='0.01' type='range'>
+        <div class='label'>Tax</div>
+        <div class='number'>({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}</div>
+        <!-- %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent(); calcTotal()" } -->
+        <!-- %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency(); calcTotal()"} -->
       </div>
       <div class='total-panel quarter-panel'>
-        <p>The total is {{ total | currency }}</p>
+        <div class='label'>Total</div>
+        <div class='number'>{{ total | currency }}</div>
       </div>
+      <div class='quarter-panel'></div>
+      <div calc='' class='calc'></div>
       <!-- %p Dollars are {{ bill.dollars }} -->
       <!-- %p Cents are {{ bill.cents }} -->
       <!-- %input{ type: "text", "ng-model" => "newDollars", placeholder: "New Dollars" } -->
