--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -1,12 +1,12 @@
 <ion-view title='TipAdvisor'>
   <ion-content ng-controller='homeCtrl'>
     <div class='main'>
-      <div class='bill-panel quarter-panel active-panel'>
+      <div class='bill-panel quarter-panel active-panel' id='panel-0' ng-click='changeActivePanel(0)'>
         <div class='label'>Bill</div>
         <div class='number'>{{ bill.currency | currency }}</div>
         <!-- %input{ type: "number", "ng-model" => "bill.currency", "ng-change" => "recalcTipPercent(); recalcTaxPercent(); calcTotal()", placeholder: "{{ bill.currency | number : 2}}", "inputOnlyNumsTwoDec" => "" } -->
       </div>
-      <div class='tip-panel quarter-panel'>
+      <div class='tip-panel quarter-panel' id='panel-1' ng-click='changeActivePanel(1)'>
         <div class='label'>Tip</div>
         <div class='number'>
           ({{ tip.percent * 100 | number : 2 }}%)
@@ -15,13 +15,13 @@
         <!-- %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent(); calcTotal()" } -->
         <!-- %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency(); calcTotal()" } -->
       </div>
-      <div class='tax-panel quarter-panel'>
+      <div class='tax-panel quarter-panel' id='panel-2' ng-click='changeActivePanel(2)'>
         <div class='label'>Tax</div>
         <div class='number'>({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}</div>
         <!-- %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent(); calcTotal()" } -->
         <!-- %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency(); calcTotal()"} -->
       </div>
-      <div class='total-panel quarter-panel'>
+      <div class='total-panel quarter-panel' id='panel-3'>
         <div class='label'>Total</div>
         <div class='number'>{{ total | currency }}</div>
       </div>
