--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -9,8 +9,7 @@
       <div class='tip-panel quarter-panel' id='panel-1' ng-click='changeActivePanel(1)'>
         <div class='label'>Tip</div>
         <div class='number'>
-          ({{ tip.percent * 100 | number : 2 }}%)
-          <span class='currency'>{{ tip.currency | currency }}</span>
+          ({{ tip.percent * 100 | number : 2 }}%) {{ tip.currency | currency }}
         </div>
         <!-- %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent(); calcTotal()" } -->
         <!-- %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency(); calcTotal()" } -->
