--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -10,7 +10,6 @@
         .number 
           ({{ tip.percent * 100 | number : 2 }}%) {{ tip.currency | currency }}
         / %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent(); calcTotal()" }
-        / %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency(); calcTotal()" }
       #panel-2.tax-panel.quarter-panel{ "ng-click" => "changeActivePanel(2)" }
         .label Tax 
         .number ({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}
@@ -20,6 +19,7 @@
         .label Total
         .number {{ total | currency }}
       .quarter-panel
+        %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "sliderUsed(); recalcTipCurrency(); calcTotal()" }
       .calc{ "calc" => "" }
       / %p Dollars are {{ bill.dollars }}
       / %p Cents are {{ bill.cents }}
