--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -12,7 +12,6 @@
           ({{ tip.percent * 100 | number : 2 }}%) {{ tip.currency | currency }}
         </div>
         <!-- %input{ type: "number", "ng-model" => "tip.currency", "ng-change" => "recalcTipPercent(); calcTotal()" } -->
-        <!-- %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "recalcTipCurrency(); calcTotal()" } -->
       </div>
       <div class='tax-panel quarter-panel' id='panel-2' ng-click='changeActivePanel(2)'>
         <div class='label'>Tax</div>
@@ -24,7 +23,9 @@
         <div class='label'>Total</div>
         <div class='number'>{{ total | currency }}</div>
       </div>
-      <div class='quarter-panel'></div>
+      <div class='quarter-panel'>
+        <input max='0.30' min='0.00' ng-change='sliderUsed(); recalcTipCurrency(); calcTotal()' ng-model='tip.percent' step='0.01' type='range'>
+      </div>
       <div calc='' class='calc'></div>
       <!-- %p Dollars are {{ bill.dollars }} -->
       <!-- %p Cents are {{ bill.cents }} -->
