--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -1,5 +1,5 @@
 %ion-view{ title: "TipAdvisor"}
-  %ion-content{ "ng-controller" => "homeCtrl" }
+  %ion-content{ "ng-controller" => "homeCtrl"}
     .main
       #panel-0.bill-panel.quarter-panel.active-panel{ "ng-click" => "changeActivePanel(0)" }
         .label Bill
@@ -14,12 +14,13 @@
         .label Tax 
         .number ({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}
         / %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent(); calcTotal()" }
-        / %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency(); calcTotal()"}
       #panel-3.total-panel.quarter-panel
         .label Total
         .number {{ total | currency }}
-      .quarter-panel
-        %input{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "sliderUsed(); recalcTipCurrency(); calcTotal()" }
+      #panel-4-1.slider-panel.panel-hidden.quarter-panel
+        %input#tip-slider{ type: "range", min: "0.00", max: "0.30", step: "0.01", "ng-model" => "tip.percent", "ng-change" => "sliderUsed(); recalcTipCurrency(); calcTotal()" }
+      / #panel-4-2.slider-panel.panel-hidden.quarter-panel
+      /   %input#tax-slider{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "sliderUsed(); recalcTaxCurrency(); calcTotal()" }
       .calc{ "calc" => "" }
       / %p Dollars are {{ bill.dollars }}
       / %p Cents are {{ bill.cents }}
