--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -17,15 +17,16 @@
         <div class='label'>Tax</div>
         <div class='number'>({{ tax.percent * 100 | number : 2 }}%) {{ tax.currency | currency }}</div>
         <!-- %input{ type: "number", "ng-model" => "tax.currency", "ng-change" => "recalcTaxPercent(); calcTotal()" } -->
-        <!-- %input{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "recalcTaxCurrency(); calcTotal()"} -->
       </div>
       <div class='total-panel quarter-panel' id='panel-3'>
         <div class='label'>Total</div>
         <div class='number'>{{ total | currency }}</div>
       </div>
-      <div class='quarter-panel'>
-        <input max='0.30' min='0.00' ng-change='sliderUsed(); recalcTipCurrency(); calcTotal()' ng-model='tip.percent' step='0.01' type='range'>
+      <div class='slider-panel panel-hidden quarter-panel' id='panel-4-1'>
+        <input id='tip-slider' max='0.30' min='0.00' ng-change='sliderUsed(); recalcTipCurrency(); calcTotal()' ng-model='tip.percent' step='0.01' type='range'>
       </div>
+      <!-- #panel-4-2.slider-panel.panel-hidden.quarter-panel -->
+      <!-- %input#tax-slider{ type: "range", min: "0.00", max: "1", step: "0.01","ng-model" => "tax.percent", "ng-change" => "sliderUsed(); recalcTaxCurrency(); calcTotal()" } -->
       <div calc='' class='calc'></div>
       <!-- %p Dollars are {{ bill.dollars }} -->
       <!-- %p Cents are {{ bill.cents }} -->
