--- a/haml/templates/newhome.haml
+++ b/haml/templates/newhome.haml
@@ -1,6 +1,6 @@
 %ion-view{ title: "TipAdvisor"}
   %ion-content{ "ng-controller" => "homeCtrl" }
-    %ion-refresher{ "on-refresh" => "clearAll()", "pulling-icon" => "ion-ios7-reload", "refreshing-icon" => "ion-ios7-reloading" }
+    %ion-refresher{ "on-refresh" => "clearAll()", "pulling-icon" => "ion-ios7-reloading", "refreshing-icon" => "ion-ios7-reloading" }
     .main
       #panel-0.bill-panel.quarter-panel.active-panel{ "ng-click" => "changeActivePanel(0)" }
         .label Bill
