--- a/www/templates/newhome.html
+++ b/www/templates/newhome.html
@@ -1,6 +1,6 @@
 <ion-view title='TipAdvisor'>
   <ion-content ng-controller='homeCtrl'>
-    <ion-refresher on-refresh='clearAll()' pulling-icon='ion-ios7-reload' refreshing-icon='ion-ios7-reloading'></ion-refresher>
+    <ion-refresher on-refresh='clearAll()' pulling-icon='ion-ios7-reloading' refreshing-icon='ion-ios7-reloading'></ion-refresher>
     <div class='main'>
       <div class='bill-panel quarter-panel active-panel' id='panel-0' ng-click='changeActivePanel(0)'>
         <div class='label'>Bill</div>
