rename and change calc method for tax to calculate tip from given percent

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -22,7 +22,7 @@ $max-height: 100%;
 }
 
 html {
-
+  background: linear-gradient(to bottom,$curious-blue, $niagara-green);
 }
 body {
   background: darken($curious-blue, 10%);
